# pylocalize

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
example/: example.db  main.py
example/static/: static_data.json
src/pylocalize/: __init__.py  decorator.py  localize_manager.py
tests/: test_localize.py
